apps/subsystems/downloaders/bazarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: downloaders
  labels:
    app.kubernetes.io/name: bazarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: bazarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bazarr
    spec:
      automountServiceAccountToken: false
      containers:
      - name: bazarr
        command:
        - /scripts/entrypoint.sh
        image: ghcr.io/linuxserver/bazarr:1.6.2@sha256:c1673816321156b904af9b7e6415ea547ae9622e4acc375358f1e1eb9ed1e904
        imagePullPolicy: IfNotPresent
        livenessProbe:
          tcpSocket:
            port: 6767
        ports:
        - name: bazarr
          containerPort: 6767
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 6767
        resources:
          requests:
            cpu: 15m
            memory: 273Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /config
          name: bazarr-data
        - mountPath: /data
          name: bazarr-media
        - mountPath: /config.yaml.preconfigured
          name: downloader-config
          readOnly: true
          subPath: bazarr.yaml
        - mountPath: /scripts
          name: bazarr-scripts
        - mountPath: /config/log
          name: bazarr-logs
        - mountPath: /tmp
          name: bazarr-temp
      securityContext:
        runAsNonRoot: true
        runAsUser: ${media_writer_uid}
        runAsGroup: ${media_writer_gid}
        fsGroup: ${media_writer_gid}
        fsGroupChangePolicy: OnRootMismatch
      volumes:
      - name: bazarr-data
        persistentVolumeClaim:
          claimName: bazarr-data
      - name: bazarr-media
        persistentVolumeClaim:
          claimName: media
      - name: downloader-config
        secret:
          secretName: downloader-config
          optional: true
      - name: bazarr-scripts
        configMap:
          name: bazarr-scripts
          defaultMode: 0755
      - name: bazarr-logs
        emptyDir: {}
      - name: bazarr-temp
        emptyDir: {}
